--- a/product-details.html
+++ b/product-details.html
@@ -16,8 +16,9 @@
         <link
             href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet" />
-        <link rel="stylesheet" href="./styles/product-details.css" />
         <title>Marketplace - Compito di fine modulo</title>
+        <link rel="stylesheet" href="./styles/cart.css" />
+        <link rel="stylesheet" href="./styles/product-details.css" />
     </head>
     <body class="d-flex flex-column vh-100">
         <div class="container-fluid bg-warning py-1 sticky-top shadow-sm">
@@ -51,11 +52,42 @@
                     <div class="col-4 text-center">
                         <h2 class="display-6 fw-bold">Marketplace.</h2>
                     </div>
-                    <div
-                        class="col-4 d-flex justify-content-end gap-4 fs-5"></div>
+                    <div class="col-4 d-flex justify-content-end gap-4 fs-5">
+                        <div class="position-relative">
+                            <i
+                                id="openCartButton"
+                                class="bi bi-bag cart-icon"></i>
+                            <span id="cartBadge" class="badge text-black"
+                                >0</span
+                            >
+                        </div>
+                    </div>
                 </div>
             </nav>
         </div>
+        <!-- CART -->
+        <dialog id="cartContainer" class="position-relative">
+            <i id="closeCartButton" class="bi bi-x-lg"></i>
+            <div class="d-flex flex-column h-100">
+                <div class="cart-header">
+                    <h4 id="cartMessage" class="text-center">
+                        Your cart is empty
+                    </h4>
+                </div>
+                <div class="p-3">
+                    <ul id="cartProductsContainer"></ul>
+                </div>
+                <div
+                    class="d-flex justify-content-between align-items-end mt-auto p-3">
+                    <button id="clearCartButton" class="btn btn-danger">
+                        Clear cart
+                    </button>
+                    <h6 class="mb-0">
+                        Your total is: <span id="cartCheckout">0</span>€
+                    </h6>
+                </div>
+            </div>
+        </dialog>
         <!-- MAIN CONTENT -->
         <main class="container py-5">
             <!-- SPINNER -->
@@ -132,6 +164,7 @@
             crossorigin="anonymous"
             integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
             crossorigin="anonymous"></script>
+        <script src="./scripts/cart.js"></script>
         <script src="./scripts/product-details.js"></script>
     </body>
 </html>
