--- a/back-office.html
+++ b/back-office.html
@@ -21,14 +21,16 @@
         <link
             href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet" />
-        <link rel="stylesheet" href="./styles/back-office.css" />
         <title>Marketplace - Compito di fine modulo</title>
+        <link rel="stylesheet" href="./styles/side-nav.css" />
+        <link rel="stylesheet" href="./styles/back-office.css" />
     </head>
     <body class="d-flex flex-column vh-100">
-        <div class="container-fluid bg-info py-1 sticky-top shadow-sm">
+        <div
+            class="container-fluid bg-info py-1 sticky-top shadow-sm top-banner">
             <div class="row">
                 <div class="col">
-                    <p class="top-banner text-center mb-0">
+                    <p class="text-center mb-0">
                         You are currently logged in as
                         <span class="user-role">Shop Manager</span>.
                     </p>
@@ -37,7 +39,37 @@
         </div>
         <!-- NAVBAR -->
         <nav class="container py-4">
-            <div class="row align-items-center">
+            <!-- MOBILE NAVBAR -->
+            <div class="row d-md-none">
+                <div class="col">
+                    <i id="burgerButton" class="bi bi-list"></i>
+                </div>
+                <div id="sideNavbar" class="hide-side-nav">
+                    <div
+                        class="d-flex justify-content-between align-items-center">
+                        <h2 class="display-6 fw-bold">Marketplace.</h2>
+                        <i
+                            id="closeSideNavButton"
+                            class="bi bi-x-lg opacity-0"></i>
+                    </div>
+                    <ul class="list-unstyled gap-4 mb-0">
+                        <li>
+                            <a class="text-decoration-none" href="./index.html"
+                                >HOME</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                class="text-decoration-none"
+                                href="./back-office.html"
+                                >ADD ITEMS</a
+                            >
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- NORMAL NAVBAR -->
+            <div class="row d-none d-md-flex align-items-center">
                 <ul class="d-none d-md-flex col-4 list-unstyled gap-4 mb-0">
                     <li>
                         <a class="text-decoration-none" href="./index.html"
@@ -55,7 +87,6 @@
                 <div class="col-4 text-center">
                     <h2 class="display-6 fw-bold">Marketplace.</h2>
                 </div>
-                <div class="col-4 d-flex justify-content-end gap-4 fs-5"></div>
             </div>
         </nav>
         <!-- JUMBOTRON -->
@@ -271,6 +302,7 @@
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="./scripts/form-validation.js"></script>
+        <script src="./scripts/side-nav.js"></script>
         <script src="./scripts/back-office.js"></script>
     </body>
 </html>
