--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
         <link
             href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet" />
+        <link rel="stylesheet" href="./styles/side-nav.css" />
         <link rel="stylesheet" href="./styles/swiper.css" />
         <link rel="stylesheet" href="./styles/cart.css" />
         <link rel="stylesheet" href="./styles/main.css" />
         <title>Marketplace - Compito di fine modulo</title>
     </head>
-    <body class="d-flex flex-column vh-100">
-        <div class="container-fluid bg-warning py-1 sticky-top shadow-sm">
+    <body class="d-flex flex-column vh-100 position-relative">
+        <div
+            class="container-fluid bg-warning py-1 sticky-top shadow-sm top-banner">
             <div class="row">
                 <div class="col">
-                    <p class="top-banner text-center mb-0">
+                    <p class="text-center mb-0">
                         You are currently logged in as
                         <span class="user-role">Shop Manager</span>.
                     </p>
@@ -37,7 +39,41 @@
         </div>
         <!-- NAVBAR -->
         <nav class="container py-4">
-            <div class="row align-items-center">
+            <!-- MOBILE NAVBAR -->
+            <div class="row d-md-none">
+                <div class="col">
+                    <i id="burgerButton" class="bi bi-list"></i>
+                </div>
+                <div id="sideNavbar" class="hide-side-nav">
+                    <div
+                        class="d-flex justify-content-between align-items-center">
+                        <h2 class="display-6 fw-bold">Marketplace.</h2>
+                        <i
+                            id="closeSideNavButton"
+                            class="bi bi-x-lg opacity-0"></i>
+                    </div>
+                    <ul class="list-unstyled gap-4 mb-0">
+                        <li>
+                            <a class="text-decoration-none" href="./index.html"
+                                >HOME</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                class="text-decoration-none"
+                                href="./back-office.html"
+                                >ADD ITEMS</a
+                            >
+                        </li>
+                    </ul>
+                    <div class="position-relative fs-5 mt-5">
+                        <i class="bi bi-bag cart-icon open-cart-btn"></i>
+                        <span class="badge text-black cart-badge">0</span>
+                    </div>
+                </div>
+            </div>
+            <!-- NORMAL NAVBAR -->
+            <div class="row d-none d-md-flex align-items-center">
                 <ul class="d-none d-md-flex col-4 list-unstyled gap-4 mb-0">
                     <li>
                         <a class="text-decoration-none" href="./index.html"
@@ -57,8 +93,8 @@
                 </div>
                 <div class="col-4 d-flex justify-content-end gap-4 fs-5">
                     <div class="position-relative">
-                        <i id="openCartButton" class="bi bi-bag cart-icon"></i>
-                        <span id="cartBadge" class="badge text-black">0</span>
+                        <i class="bi bi-bag cart-icon open-cart-btn"></i>
+                        <span class="badge text-black cart-badge">0</span>
                     </div>
                 </div>
             </div>
@@ -90,10 +126,11 @@
         <div class="container-fluid jumbotron p-5 mb-4">
             <div class="container d-flex flex-column gap-3 py-5">
                 <h1 class="display-1 fw-bold text-white">
-                    A whole world of amazing products to discover and buy from
-                    your comfy home!
+                    A whole world of amazing products to discover!
                 </h1>
-                <button class="hero-btn align-self-start shadow" type="button">
+                <button
+                    class="hero-btn align-self-start shadow mt-5"
+                    type="button">
                     About us<i
                         class="bi bi-arrow-right-circle-fill fs-4 ms-3"></i>
                 </button>
@@ -192,6 +229,7 @@
             integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script src="./scripts/side-nav.js"></script>
         <script src="./scripts/swiper.js"></script>
         <script src="./scripts/cart.js"></script>
         <script src="./scripts/main.js"></script>
