--- a/product-details.html
+++ b/product-details.html
@@ -18,13 +18,15 @@
             rel="stylesheet" />
         <title>Marketplace - Compito di fine modulo</title>
         <link rel="stylesheet" href="./styles/cart.css" />
+        <link rel="stylesheet" href="./styles/side-nav.css" />
         <link rel="stylesheet" href="./styles/product-details.css" />
     </head>
     <body class="d-flex flex-column vh-100">
-        <div class="container-fluid bg-warning py-1 sticky-top shadow-sm">
+        <div
+            class="container-fluid bg-warning py-1 sticky-top shadow-sm top-banner">
             <div class="row">
                 <div class="col">
-                    <p class="top-banner text-center mb-0">
+                    <p class="text-center mb-0">
                         You are currently logged in as
                         <span class="user-role">Shop Manager</span>.
                     </p>
@@ -32,10 +34,21 @@
             </div>
         </div>
         <!-- NAVBAR -->
-        <div class="container-fluid bg-white shadow-sm">
-            <nav class="container py-4">
-                <div class="row align-items-center">
-                    <ul class="d-none d-md-flex col-4 list-unstyled gap-4 mb-0">
+        <nav class="container py-4">
+            <!-- MOBILE NAVBAR -->
+            <div class="row d-md-none">
+                <div class="col">
+                    <i id="burgerButton" class="bi bi-list"></i>
+                </div>
+                <div id="sideNavbar" class="hide-side-nav">
+                    <div
+                        class="d-flex justify-content-between align-items-center">
+                        <h2 class="display-6 fw-bold">Marketplace.</h2>
+                        <i
+                            id="closeSideNavButton"
+                            class="bi bi-x-lg opacity-0"></i>
+                    </div>
+                    <ul class="list-unstyled gap-4 mb-0">
                         <li>
                             <a class="text-decoration-none" href="./index.html"
                                 >HOME</a
@@ -49,22 +62,39 @@
                             >
                         </li>
                     </ul>
-                    <div class="col-4 text-center">
-                        <h2 class="display-6 fw-bold">Marketplace.</h2>
-                    </div>
-                    <div class="col-4 d-flex justify-content-end gap-4 fs-5">
-                        <div class="position-relative">
-                            <i
-                                id="openCartButton"
-                                class="bi bi-bag cart-icon"></i>
-                            <span id="cartBadge" class="badge text-black"
-                                >0</span
-                            >
-                        </div>
+                    <div class="position-relative fs-5 mt-5">
+                        <i class="bi bi-bag cart-icon open-cart-btn"></i>
+                        <span class="badge text-black cart-badge">0</span>
                     </div>
                 </div>
-            </nav>
-        </div>
+            </div>
+            <!-- NORMAL NAVBAR -->
+            <div class="row d-none d-md-flex align-items-center">
+                <ul class="d-none d-md-flex col-4 list-unstyled gap-4 mb-0">
+                    <li>
+                        <a class="text-decoration-none" href="./index.html"
+                            >HOME</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            class="text-decoration-none"
+                            href="./back-office.html"
+                            >ADD ITEMS</a
+                        >
+                    </li>
+                </ul>
+                <div class="col-4 text-center">
+                    <h2 class="display-6 fw-bold">Marketplace.</h2>
+                </div>
+                <div class="col-4 d-flex justify-content-end gap-4 fs-5">
+                    <div class="position-relative">
+                        <i class="bi bi-bag cart-icon open-cart-btn"></i>
+                        <span class="badge text-black cart-badge">0</span>
+                    </div>
+                </div>
+            </div>
+        </nav>
         <!-- CART -->
         <dialog id="cartContainer" class="position-relative">
             <i id="closeCartButton" class="bi bi-x-lg"></i>
@@ -165,6 +195,7 @@
             integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
             crossorigin="anonymous"></script>
         <script src="./scripts/cart.js"></script>
+        <script src="./scripts/side-nav.js"></script>
         <script src="./scripts/product-details.js"></script>
     </body>
 </html>
